# env

./: .gitmodules  .myenv.swp  README.md  bashrc  main  myenv  tmux.conf  xdock  xssh
openwrt/x64/: readme
sh/: .xem.swp  xandroid  xapt  xbit  xbitbake  xcargo  xclion  xcode  xdbus  xdev_cargo  xdev_java  xdev_rust  xdock  xelectron  xem  xemcc  xffi  xgit  xgo  xgvm  xhsiung  xidea  xiot  xkernel  xko  xkotlin  xlosetup  xmount  xneon  xnodejs  xnvm  xonedev  xopenwrt  xother  xpc  xpyo3  xreact  xrust  xsdkman  xssh  (+10 more)
snippets/: xdocker-compose.code-snippets
ssh/: config  id_rsa  id_rsa.pub  known_hosts
tpl/electron/: buildLinux.sh  buildWin.sh  index.html  index.js  main.js  package.json
tpl/electron-express/: build.sh  main.js  noapp.js  package.json
tpl/electron-nodepy/: build.sh  index.html  main.js  package-lock.json  package.json
tpl/electron-win/: index.html  main.js  package.json
tpl/ffi-lib/: test.js  test.py
tpl/ffi-lib-struct/: Cargo.toml  test.js  test.py
tpl/ffi-lib-type/: test.js  test.py
tpl/iot/: index.js  index.ts  package-lock.json  package.json  tsconfig.json
tpl/proj/: Cargo.toml  build.sh
tpl/pyo3lib/: build.sh
tpl/pyo3main/: Cargo.toml  build.sh  main.rs
tpl/pyo3main2/: Cargo.toml  main.py
tpl/pyo3mo/: Cargo.toml  test.py
tpl/react/: .webpack.config.js.swp  package.json  webpack.config.js
tpl/tsproj/: build.sh  package.json
tpl/wasm-pack/notpl2/: Cargo.toml  mytest.js
xcargo/wasm-pack/tpl2/crate/: Cargo.toml
xcargo/wasm-pack/tpl2/crate/js/: myclass.js
xcargo/wasm-pack/tpl2/crate/src/: lib.rs
(+120 files in other folders)
