[package]
name = "test"
version = "0.1.0"
authors = ["xhsiung <xhsiung@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "^1.0.105"
serde_derive = "^1.0.105"
js-sys = "0.3.33"
serde_json = "1.0.50"

[dependencies.wasm-bindgen]
version="^0.2"
features = ["serde-serialize"]
