[package]
name = "mylib"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
js-sys = "0.3.33"

[dependencies.wasm-bindgen]
version="^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CustomEventInit',
  'CustomEvent',
  'Event'
]
